Deleted some data

--- a/Part 1.ipynb
+++ b/Part 1.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea6d960",
+   "id": "b71bf7f1",
    "metadata": {},
    "source": [
     "And the recorded channels / electrodes  with:"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7ad9c7e8",
+   "id": "08aef5f2",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
     }
    ],
    "source": [
-    "evoked_data = evoked.get_data()\n",
+    "evoked_data = evoked._data\n",
     "shape_evoked = evoked_data.shape\n",
     "print(f'The evoked has the shape: {shape_evoked} (Channels x Times)')"
    ]
@@ -749,8 +749,8 @@
     "ax.set_ylabel('Volt')\n",
     "\n",
     "# solution ...\n",
-    "ax.plot(ep_std.average().get_data()[channel_Cz, :], color='blue', label='Standard')\n",
-    "ax.plot(ep_nov.average().get_data()[channel_Cz, :], color='red', label='Novel')\n",
+    "ax.plot(ep_std.average()._data[channel_Cz, :], color='blue', label='Standard')\n",
+    "ax.plot(ep_nov.average()._data[channel_Cz, :], color='red', label='Novel')\n",
     "# \n",
     "\n",
     "legend = ax.legend(loc='upper right', shadow=True, fontsize='medium')\n",
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "89e4454a",
+   "id": "822187ba",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "090e8f27",
+   "id": "9b9713a6",
    "metadata": {},
    "source": [
     "The following exampe is not scientifically correct and this should not be used. It's purpouse is purely illustrative.\n",
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2a48efe4",
+   "id": "58571202",
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe922eab",
+   "id": "73398094",
    "metadata": {},
    "source": [
     "If the p-value (at the second position) is bellow 0.05 we will consider it significant. \n",
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61efd980",
+   "id": "d8fb531b",
    "metadata": {},
    "source": [
     "### Exercise 9:\n",
