Final Version 1 and 2, updated 3

--- a/Part 1.ipynb
+++ b/Part 1.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install mne\n",
     "import mne\n",
     "import matplotlib.pyplot as plt\n",
     "import mne.viz\n",
@@ -47,6 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_file = 'https://github.com/fma0/AMLD/blob/main/902-P'\n",
     "data_file = '902-P'"
    ]
   },
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b71bf7f1",
+   "id": "387236a5",
    "metadata": {},
    "source": [
     "And the recorded channels / electrodes  with:"
@@ -284,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "08aef5f2",
+   "id": "6f18de03",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "822187ba",
+   "id": "b623be4d",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b9713a6",
+   "id": "b422f8e5",
    "metadata": {},
    "source": [
     "The following exampe is not scientifically correct and this should not be used. It's purpouse is purely illustrative.\n",
@@ -1011,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "58571202",
+   "id": "4795e3fd",
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73398094",
+   "id": "1e1d6437",
    "metadata": {},
    "source": [
     "If the p-value (at the second position) is bellow 0.05 we will consider it significant. \n",
@@ -1083,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8fb531b",
+   "id": "37ef898c",
    "metadata": {},
    "source": [
     "### Exercise 9:\n",
