--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install mne\n",
     "import mne\n",
     "from mne.decoding import Vectorizer, SlidingEstimator, cross_val_multiscore\n",
     "\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8345b655",
+   "id": "0a8dd86e",
    "metadata": {},
    "source": [
     "## Loading the data and creating train - test sets"
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a73ee5",
+   "id": "0d4b142f",
    "metadata": {},
    "source": [
     "### Exercise 1:\n",
@@ -55,11 +56,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7f946aba",
+   "id": "515b6cc5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# solution\n",
+    "data_file = 'https://github.com/fma0/AMLD/blob/main/902-P'\n",
     "data_file = '902-P'\n",
     "epochs = mne.read_epochs(data_file + '.fif', verbose='error')\n",
     "\n",
@@ -79,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "699f272b",
+   "id": "4a8d9d7c",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9666bf80",
+   "id": "350cebbf",
    "metadata": {},
    "source": [
     "To check which event ID corresponds to which condtion check epochs.event_id."
@@ -117,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "03fd8c65",
+   "id": "54ea7528",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eaaa27f",
+   "id": "668a47b4",
    "metadata": {},
    "source": [
     "In the first line of the next shell we extract the labels. As we saw right above, they are currently set to 201 and 202. We map them to 0 and 1 in the second line of the next shell, such that the class with more trials (*Standard*, assigned 201) will now correspond to 0. "
@@ -146,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1ef5c45f",
+   "id": "d6699ccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b03db5",
+   "id": "58f3c62b",
    "metadata": {},
    "source": [
     "### Exercise 2:\n",
@@ -166,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c7889a95",
+   "id": "5da6ad7e",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db439e57",
+   "id": "3aa1b8cc",
    "metadata": {},
    "source": [
     "### Exercise 3:\n",
@@ -214,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "02c074bf",
+   "id": "d9b08577",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9d7008c",
+   "id": "d2bbd9f0",
    "metadata": {},
    "source": [
     "## Creating a pipeline and fitting a first classifier"
@@ -242,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aafd57e7",
+   "id": "b5be9ee6",
    "metadata": {},
    "source": [
     "Next, we will construct a pipeline for classification with the function [make_pipeline()](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.make_pipeline.html) of the sklearn library. We want to execute the following steps:\n",
@@ -260,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b16ddd32",
+   "id": "61cc59e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66540de",
+   "id": "f350dd24",
    "metadata": {},
    "source": [
     "Now we have everythin ready and can fit our classifier with the training data:"
@@ -279,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a66208d1",
+   "id": "e9a89407",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b9ef347",
+   "id": "cd495dc3",
    "metadata": {},
    "source": [
     "After training the classifier we evaluate the performance, first on the train set, by calculating the predicted labels for the train_data and then the [accuracy](accuracy_score) with the function from sklearn.metrics"
@@ -312,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "eb389183",
+   "id": "c22d3c95",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a4e956d",
+   "id": "553dda74",
    "metadata": {},
    "source": [
     "But it is easier, to use the function from sklearn to directly get the score"
@@ -339,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ff402371",
+   "id": "4665c8ad",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a66afb7c",
+   "id": "e3af5994",
    "metadata": {},
    "source": [
     "### Exercise 4: \n",
@@ -369,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f9cfc4e9",
+   "id": "13754380",
    "metadata": {
     "scrolled": true
    },
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e297150b",
+   "id": "07b81de6",
    "metadata": {},
    "source": [
     "As it was mentioned in the lecture, it is not very good to only do this once, on a single split of the data. So we would need to do the data spliting, fitting the classifers and evaluation multiple times. \n",
@@ -402,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "643fa853",
+   "id": "5c1ed0c3",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d43aff",
+   "id": "9dedf820",
    "metadata": {},
    "source": [
     "## Optimizing the classifier"
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4fd46fd",
+   "id": "495d9a36",
    "metadata": {},
    "source": [
     "In the above paradigm we just used a default implementation of Logistic Regression with a 'l2' metric and a hyperparameter C set to 1. Now we will estimate the parameters through exhaustive [Grid Search](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html), these parameters are oftentimes called hyperparameters.\n",
@@ -452,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5e69cfcb",
+   "id": "3c931e59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e620c748",
+   "id": "475a81ab",
    "metadata": {},
    "source": [
     "We include the Grid Search in the pipeline, in stead of Logistic Regression. The GridSearch object will take the classifier as an argument. And as you can see we also give again the cv argument, such that the parameters above can be evaluated on multiple different splits. "
@@ -470,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f8974575",
+   "id": "6ada21ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "da84ee3c",
+   "id": "7f0f9769",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0d92bc",
+   "id": "db101bd4",
    "metadata": {},
    "source": [
     "As before we can asses the performance of the train set with:"
@@ -519,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9787aa8d",
+   "id": "c6a924eb",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c36064ae",
+   "id": "e1b8c6c4",
    "metadata": {},
    "source": [
     "### Exercise 5:\n",
@@ -549,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a21d41e8",
+   "id": "b3a7dd9e",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab045e57",
+   "id": "21982325",
    "metadata": {},
    "source": [
     "We can extract the optimized parameters through:"
@@ -578,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a9dee49b",
+   "id": "9b0a5a09",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9d0062f",
+   "id": "0be7cdda",
    "metadata": {},
    "source": [
     "Please note, that this is only working on a classifier trained specifically. You can not extract the best parameters from the cross_val_score function."
@@ -607,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a14f59f",
+   "id": "1ea63487",
    "metadata": {},
    "source": [
     "## A short note on Bias"
@@ -615,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab263cac",
+   "id": "9fa41581",
    "metadata": {},
    "source": [
     "What is the level of chance for the data that we are using?\n",
@@ -630,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5a930d7c",
+   "id": "272ac3c5",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd2bc3a",
+   "id": "bd8dbec0",
    "metadata": {},
    "source": [
     "### Exercise 6:\n",
@@ -662,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4d0b3810",
+   "id": "9855258f",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8756875b",
+   "id": "2248b59e",
    "metadata": {},
    "source": [
     "## Sliding Estimator"
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eddc31fe",
+   "id": "a636fc80",
    "metadata": {},
    "source": [
     "In the steps above we were still evaluating a rather simplified version of our data, where we did not considered the temporal structure of EEG data. But considered all time points and electrodes simultaneously.  Now we will take the temporal dimension into account as well and will evaluate how classification accuracy changes across time. For this we will use the [SlidingEstimator](https://mne.tools/stable/generated/mne.decoding.SlidingEstimator.html) of mne:"
@@ -702,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c5896f9c",
+   "id": "52358671",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b47ed92a",
+   "id": "1ddbe57f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9895e55d",
+   "id": "11c4ba02",
    "metadata": {},
    "source": [
     "### Exercise 7:\n",
@@ -775,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9a8d0cb4",
+   "id": "69f0604a",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f59a0275",
+   "id": "d50383c4",
    "metadata": {},
    "source": [
     "We can now plot the classification accuracies across time:"
@@ -802,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8e0aa0d5",
+   "id": "3e03f9e5",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a1600c9",
+   "id": "9e001a30",
    "metadata": {},
    "source": [
     "### Extracting the weights\n",
@@ -843,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8be51ee9",
+   "id": "0111b75f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +858,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce8ed724",
+   "id": "692d02d3",
    "metadata": {},
    "source": [
     "### Exercise 8:\n",
@@ -866,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2d16c6f8",
+   "id": "156fa600",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ebfed6b3",
+   "id": "5daffd61",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c3a065e",
+   "id": "cfcf79cb",
    "metadata": {},
    "outputs": [],
    "source": []
